--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,9 @@
+
+
 version: '3.8'
 services:
   lora-api:
-    build: ./docker
+    build: ./Experimental
     container_name: lora-sensor-api
     restart: unless-stopped
     ports:
@@ -20,7 +22,6 @@ services:
 networks:
   lora-network:
     driver: bridge
-
 
 
 
