Fix Docker configuration: correct build path from ./Experimental to ., add static volume mount

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,27 +1,15 @@
-
-
 version: '3.8'
 services:
-  lora-api:
-    build: ./Experimental
-    container_name: lora-sensor-api
-    restart: unless-stopped
+  lora-sensor-network:
+    build: .
     ports:
       - "5001:5001"
-    environment:
-      - TZ=${TIMEZONE:-UTC}
-      - CONFIG_PATH=/app/config/settings.json
-      - DATABASE_PATH=/app/data/lora_sensors.db
     volumes:
       - ./data:/app/data
       - ./config:/app/config
-      - ./logs:/app/logs
       - ./static:/app/static
-    networks:
-      - lora-network
-networks:
-  lora-network:
-    driver: bridge
-
+    environment:
+      - PYTHONUNBUFFERED=1
+      - PORT=5001
 
 
